--- a/validasi/index.html
+++ b/validasi/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Form Validasi</title>
         <script src="validation.js"></script>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
     <body>
